# engineering-atlas

./: .gitignore  AGENTS.md  README.md
01-Computer-Science/Linux/: 0001-Remote-SSH.md  0002-Remote-SSH-云服务器开发环境搭建.md  0003-Linux-C++工具链与CMake初探.md
01-Computer-Science/LinuxDemo/: EventSystem.cpp
03-Cpp/: CMakeLists.txt
03-Cpp/Cpp-lab/: .clang-tidy  CMakeLists.txt
03-Cpp/Cpp-lab/.cache/clangd/index/: Timer.cpp.088A641B073ABA48.idx  Timer.h.581C7384AB9EBE76.idx  main.cpp.6FBDA4989CFF4D9C.idx
03-Cpp/Cpp-lab/app/: main.cpp
03-Cpp/Cpp-lab/modules/event/: CMakeLists.txt  Event.cpp  Event.h
03-Cpp/Cpp-lab/modules/logger/: CMakeLists.txt  Logger.cpp  Logger.h
03-Cpp/Cpp-lab/modules/opencv_onnx_demo/: .gitignore  CMakeLists.txt  README.md
03-Cpp/Cpp-lab/modules/opencv_onnx_demo/app/: main.cpp
03-Cpp/Cpp-lab/modules/opencv_onnx_demo/include/: benchmark.h  inference.h  logger.h  modelInfo.h  modelLoader.h  modelManager.h  modelRegistry.h  pipeline.h  postProcessor.h  preProcessor.h  result.h  utils.h
03-Cpp/Cpp-lab/modules/opencv_onnx_demo/models/: registry.json
03-Cpp/Cpp-lab/modules/opencv_onnx_demo/models/squeezenet1.1-7/: model.json
03-Cpp/Cpp-lab/modules/opencv_onnx_demo/models/yolov8n/: model.json
03-Cpp/Cpp-lab/modules/opencv_onnx_demo/src/: benchmark.cpp  inference.cpp  logger.cpp  modelInfo.cpp  modelLoader.cpp  modelManager.cpp  modelRegistry.cpp  pipeline.cpp  postProcessor.cpp  preProcessor.cpp  result.cpp  utils.cpp
03-Cpp/Cpp-lab/modules/opencv_onnx_demo/tests/: test_benchmark.cpp  test_framework.cpp  test_framework.h  test_inference.cpp  test_integration.cpp  test_logger.cpp  test_main.cpp  test_model_loader.cpp  test_model_loader_edge_cases.cpp  test_model_manager.cpp  test_model_registry.cpp  test_pipeline.cpp  test_post_processor.cpp  test_post_processor_edge_cases.cpp  test_pre_processor.cpp  test_pre_processor_edge_cases.cpp  test_result.cpp  test_utils.cpp
03-Cpp/Cpp-lab/modules/timer/: CMakeLists.txt  Timer.cpp  Timer.h
03-Cpp/Cpp-lab/timer/: Timer.h
03-Cpp/Modern-CPP/: CMakeLists.txt  README.md
03-Cpp/Modern-CPP/src/: 01_raii.cpp  02_smart_pointers.cpp  03_stl_algorithms.cpp  04_const_correctness.cpp  05_move_semantics.cpp  06_lambda.cpp  07_cpp17_features.cpp
04-Industrial/cycle_invest/: requirements.txt
05-Architecture/adr/: 0001-opencv-onnx-demo-architecture.md  0002-testing-strategy-before-openmachinelab.md  0003-extract-utils-and-standardize-error-handling.md  0004-logging-abstraction.md  0005-strengthen-error-handling.md
06-OpenMachineLab/: CMakeLists.txt  README.md
06-OpenMachineLab/docs/adr/: 0001-backend-plugin-interface.md  0002-config-and-lifecycle-management.md  0003-pipeline-scheduling.md  0004-benchmark-statistics.md
06-OpenMachineLab/include/: utils.h
06-OpenMachineLab/include/backend/: BackendRegistry.h  IBackend.h  IModelSession.h  ONNXBackend.h  TensorInfo.h  TensorRTBackend.h
06-OpenMachineLab/include/benchmark/: Benchmark.h
06-OpenMachineLab/include/core/: Application.h  ConfigManager.h  GlobalConfig.h  ModelConfig.h
06-OpenMachineLab/include/pipeline/: BlockingQueue.h  FrameData.h  IPipelineStage.h  InferenceStage.h  PostprocessStage.h  PreprocessStage.h  SequentialPipeline.h  StagedPipeline.h  ThreadPool.h  ThreadPoolPipeline.h  TimingStage.h
06-OpenMachineLab/include/utils/: Timer.h
06-OpenMachineLab/src/backend/: BackendRegistry.cpp  ONNXBackend.cpp  TensorRTBackend.cpp
06-OpenMachineLab/src/benchmark/: Benchmark.cpp
06-OpenMachineLab/src/core/: Application.cpp  ConfigManager.cpp
06-OpenMachineLab/src/demo/: oml_demo.cpp
06-OpenMachineLab/src/pipeline/: InferenceStage.cpp  PostprocessStage.cpp  PreprocessStage.cpp  SequentialPipeline.cpp  StagedPipeline.cpp  ThreadPool.cpp  ThreadPoolPipeline.cpp  TimingStage.cpp
06-OpenMachineLab/tests/: test_application.cpp  test_backend.cpp  test_benchmark.cpp  test_config.cpp  test_detection_pipeline.cpp  test_framework.cpp  test_framework.h  test_pipeline.cpp  test_staged_pipeline.cpp  test_thread_pool_pipeline.cpp
